- Updated minimun SDK version from 24 to 26